testdata/baselines/reference/submodule/conformance/declarationFileForHtmlImport(allowarbitraryextensions=false).errors.txt
file.ts(1,22): error TS2307: Cannot find module './component.html' or its corresponding type declarations.


==== component.d.html.ts (0 errors) ====
    // html modules were proposed at https://github.com/WICG/webcomponents/blob/gh-pages/proposals/html-modules-explainer.md
    
    // per proposal, `default` is user-defined, but if not present, will be the document of the imported module
    declare var doc: Document;
    export default doc;
    
    // all other exports are just whatever was exported in module script blocks in the html file
    export const blogPost: Element;
    
    export class HTML5Element extends HTMLElement {
        connectedCallback(): void;
    }
    
==== file.ts (1 errors) ====
    import * as mod from "./component.html";
                         ~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './component.html' or its corresponding type declarations.
    
    window.customElements.define("my-html5-element", mod.HTML5Element);
    
    if (document !== mod.default) {
        document.body.appendChild(mod.blogPost);
    }